basic styling is done
There's a really basic styling with a lot of hard coded stuff I'd
like to add an attribute like 'accent_color' so you can change the
hover effects and the such. Ideally there will also be a size
option and touch config.

--- a/demo.html
+++ b/demo.html
@@ -24,6 +24,13 @@
       <img src="http://lorempixel.com/1200/500/people/4">
       <img src="http://lorempixel.com/1200/500/people/5">
       <img src="http://lorempixel.com/1200/500/people/6">
+      <img src="http://lorempixel.com/1200/500/people/6">
+      <img src="http://lorempixel.com/1200/500/people/5">
+      <img src="http://lorempixel.com/1200/500/people/6">
+      <img src="http://lorempixel.com/1200/500/people/3">
+      <img src="http://lorempixel.com/1200/500/people/6">
+      <img src="http://lorempixel.com/1200/500/people/4">
+      <img src="http://lorempixel.com/1200/500/people/9">
     </slider-component>
 
   </body>
