--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="style.css">
 
     <div id="container">
-      <div data-img="left" on-click="{{ slide }}" class="controls" id="left"><</div>
-      <div data-img="right" on-click="{{ slide }}" class="controls" id="right">></div>
+      <div data-img="left" on-click="{{ slide }}" class="controls" id="left"></div>
+      <div data-img="right" on-click="{{ slide }}" class="controls" id="right"></div>
 
       <ul id="bullets" class="controls">
         <template repeat="{{ image, index in images }}">
