fixes #1 for now (the best solution I could think of)
Refactored CSS to make it possible to change color/opacity with just
one class. Also added the pertinent instructions in the README.md

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="style.css">
 
     <div id="container">
-      <div data-img="left" on-click="{{ slide }}" class="controls" id="left"></div>
-      <div data-img="right" on-click="{{ slide }}" class="controls" id="right"></div>
+      <div data-img="left" on-click="{{ slide }}" class="controls accent" id="left"></div>
+      <div data-img="right" on-click="{{ slide }}" class="controls accent" id="right"></div>
 
       <ul id="bullets" class="controls">
         <template repeat="{{ image, index in images }}">
           <li>
-            <a on-click="{{ slide }}" class="bullet" data-img="{{ index }}" href="javascript:;"></a>
+            <a on-click="{{ slide }}" class="bullet accent" data-img="{{ index }}" href="javascript:;"></a>
           </li>
         </template>
       </ul>
