--- a/demo.html
+++ b/demo.html
@@ -7,23 +7,19 @@
     <link rel="import" href="index.html">
 
     <style>
-      body {
-        background-color: #3c3c3c;
-        color: #ccc;
-        font-family: Arial;
-      }
+      slider-component::shadow .accent:hover { background-color: #00ff00; }
     </style>
   </head>
   <body>
     <h1>Polymer Slider</h1>
 
     <slider-component>
-      <img src="http://lorempixel.com/1200/500/people/1">
-      <img src="http://lorempixel.com/1200/500/people/2">
-      <img src="http://lorempixel.com/1200/500/people/3">
-      <img src="http://lorempixel.com/1200/500/people/4">
       <img src="http://lorempixel.com/1200/500/people/5">
       <img src="http://lorempixel.com/1200/500/people/6">
+      <img src="http://lorempixel.com/1200/500/people/3">
+      <img src="http://lorempixel.com/1200/500/people/1">
+      <img src="http://lorempixel.com/1200/500/people/2">
+      <img src="http://lorempixel.com/1200/500/people/4">
       <img src="http://lorempixel.com/1200/500/people/6">
       <img src="http://lorempixel.com/1200/500/people/5">
       <img src="http://lorempixel.com/1200/500/people/6">
