started working on the horizontal slider
There's still a lot of work to be done in the horizontal animation,
but it kind of works now. I have to fix what happens when it reaches
the end. For now the base animation and the horizontal animation are
in different branches because it was easier to work on them
separately.

--- a/demo.html
+++ b/demo.html
@@ -17,12 +17,12 @@
 
     <slider-component>
       <img src="http://lorempixel.com/1000/500/people/9">
-      <img src="http://lorempixel.com/1000/500/people/5">
-      <img src="http://lorempixel.com/1000/500/people/6">
-      <img src="http://lorempixel.com/1000/500/people/3">
-      <img src="http://lorempixel.com/1000/500/people/1">
-      <img src="http://lorempixel.com/1000/500/people/2">
-      <img src="http://lorempixel.com/1000/500/people/4">
+      <img src="http://lorempixel.com/1000/500/people/5" class="left-slider">
+      <img src="http://lorempixel.com/1000/500/people/6" class="left-slider">
+      <img src="http://lorempixel.com/1000/500/people/3" class="left-slider">
+      <img src="http://lorempixel.com/1000/500/people/1" class="left-slider">
+      <img src="http://lorempixel.com/1000/500/people/2" class="left-slider">
+      <img src="http://lorempixel.com/1000/500/people/4" class="right-slider">
     </slider-component>
 
   </body>
